[gd_scene load_steps=8 format=3 uid="uid://d2tlfvk15q63y"]

[ext_resource type="Script" uid="uid://crnfoubvl5p8s" path="res://ui/SoundOptions.cs" id="1_goe2n"]
[ext_resource type="FontFile" uid="uid://dehx31qk1ng6l" path="res://assets/Jacquard24-Regular.ttf" id="1_h0dsi"]
[ext_resource type="Theme" uid="uid://6shp5ck1tnja" path="res://assets/flat_ui/kenneyUI.tres" id="2_7ott3"]
[ext_resource type="Script" uid="uid://7cmvl7rfas0" path="res://ui/sound_options_2.gd" id="2_vv60e"]
[ext_resource type="FontFile" uid="uid://csvfntck88xn4" path="res://assets/Inter_18pt-Bold.ttf" id="3_vv60e"]
[ext_resource type="Script" uid="uid://bwucnq7yalkg0" path="res://ui/margin_container_3.gd" id="5_v06sa"]
[ext_resource type="AudioStream" uid="uid://coxmk7l7jkne5" path="res://assets/Audio/click3.ogg" id="6_52gdw"]

[node name="SoundOptions" type="Control" node_paths=PackedStringArray("_backToHomeButton")]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_goe2n")
_backToHomeButton = NodePath("ColorRect/MarginContainer2/Button")

[node name="ColorRect" type="ColorRect" parent="."]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2

[node name="MarginContainer" type="MarginContainer" parent="ColorRect"]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
theme_override_constants/margin_left = 50
theme_override_constants/margin_top = 50
theme_override_constants/margin_right = 50
theme_override_constants/margin_bottom = 50
script = ExtResource("2_vv60e")

[node name="VBoxContainer" type="VBoxContainer" parent="ColorRect/MarginContainer"]
layout_mode = 2
theme_override_constants/separation = 50

[node name="Label" type="Label" parent="ColorRect/MarginContainer/VBoxContainer"]
layout_mode = 2
theme_override_colors/font_color = Color(0, 0, 0, 1)
theme_override_fonts/font = ExtResource("1_h0dsi")
theme_override_font_sizes/font_size = 100
text = "Sound Options"
horizontal_alignment = 1

[node name="Label4" type="Label" parent="ColorRect/MarginContainer/VBoxContainer"]
layout_mode = 2

[node name="Label2" type="Label" parent="ColorRect/MarginContainer/VBoxContainer"]
layout_mode = 2
theme_override_colors/font_color = Color(0, 0, 0, 1)
theme_override_fonts/font = ExtResource("3_vv60e")
theme_override_font_sizes/font_size = 40
text = "Background Music"

[node name="HSlider" type="HSlider" parent="ColorRect/MarginContainer/VBoxContainer"]
layout_mode = 2
theme = ExtResource("2_7ott3")

[node name="Label3" type="Label" parent="ColorRect/MarginContainer/VBoxContainer"]
layout_mode = 2
theme_override_colors/font_color = Color(0, 0, 0, 1)
theme_override_fonts/font = ExtResource("3_vv60e")
theme_override_font_sizes/font_size = 40
text = "SFX"

[node name="HSlider2" type="HSlider" parent="ColorRect/MarginContainer/VBoxContainer"]
layout_mode = 2
theme = ExtResource("2_7ott3")
value = 50.0

[node name="MarginContainer2" type="MarginContainer" parent="ColorRect"]
custom_minimum_size = Vector2(150, 80)
layout_mode = 0
offset_right = 40.0
offset_bottom = 40.0
theme_override_constants/margin_left = 20
theme_override_constants/margin_top = 20
script = ExtResource("5_v06sa")

[node name="Button" type="Button" parent="ColorRect/MarginContainer2"]
layout_mode = 2
theme = ExtResource("2_7ott3")
theme_override_fonts/font = ExtResource("1_h0dsi")
theme_override_font_sizes/font_size = 30
text = "Back To Settings"

[node name="ClickSoundEffect" type="AudioStreamPlayer" parent="ColorRect/MarginContainer2"]
stream = ExtResource("6_52gdw")
bus = &"SFX"

[connection signal="value_changed" from="ColorRect/MarginContainer/VBoxContainer/HSlider" to="ColorRect/MarginContainer" method="_on_h_slider_value_changed"]
[connection signal="value_changed" from="ColorRect/MarginContainer/VBoxContainer/HSlider2" to="ColorRect/MarginContainer" method="_on_h_slider_2_value_changed"]
[connection signal="pressed" from="ColorRect/MarginContainer2/Button" to="ColorRect/MarginContainer2" method="_on_button_pressed"]
